--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -16,14 +16,14 @@ oracle_db_address: 'localhost'
 oracle_db_port: '1521'
 oracle_db_sid: 'xe'
 oracle_db_user: 'sys'
-oracle_db_password: 'oracle'
+oracle_db_password: 'password'
 oracle_db_role: 'SYSDBA'
 
 #
 # OSB - Schemas names
 #
 osb_rcu_schema_prefix: 'OSB'
-osb_schemas_common_password: 'oracle'
+osb_schemas_common_password: 'password'
 osb_rcu_components:
   - MDS
   - IAU
