--- a/tasks/prepare.yml
+++ b/tasks/prepare.yml
@@ -32,6 +32,7 @@
     mode: 0750
   with_items:
     - { src: osb_create_basic_domain.py, dest: "{{ osb.scripts_dir }}/osb_create_basic_domain.py" }
+    - { src: osb_create_api_manager_users.py, dest: "{{ osb.scripts_dir }}/osb_create_api_manager_users.py" }
     - { src: osb_create_basic_domain_service.sh, dest: "{{ osb.scripts_dir }}/osb_create_basic_domain_service.sh" }
     - { src: osb_control_admin_server.py, dest: "{{ osb.scripts_dir }}/osb_control_admin_server.py" }
     - { src: osb_control_admin_server.sh, dest: "{{ osb.scripts_dir }}/osb_control_admin_server.sh" }
