--- a/tasks/prepare.yml
+++ b/tasks/prepare.yml
@@ -34,6 +34,7 @@
     - { src: osb_create_basic_domain.py, dest: "{{ osb.scripts_dir }}/osb_create_basic_domain.py" }
     - { src: osb_create_api_manager_users.py, dest: "{{ osb.scripts_dir }}/osb_create_api_manager_users.py" }
     - { src: osb_create_basic_domain_service.sh, dest: "{{ osb.scripts_dir }}/osb_create_basic_domain_service.sh" }
+    - { src: osb_create_api_manager_users.sh, dest: "{{ osb.scripts_dir }}/osb_create_api_manager_users.sh" }
     - { src: osb_control_admin_server.py, dest: "{{ osb.scripts_dir }}/osb_control_admin_server.py" }
     - { src: osb_control_admin_server.sh, dest: "{{ osb.scripts_dir }}/osb_control_admin_server.sh" }
     - { src: osb_control_managed_servers.py, dest: "{{ osb.scripts_dir }}/osb_control_managed_servers.py" }
